--- a/apple.html
+++ b/apple.html
@@ -333,6 +333,10 @@
    .logo{
     display: flex;
     margin-left: 129px;
+    img{
+        margin-top:-23px;
+    }
+    
    }
    .Footer2{
     display:flex;
