--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <div><a href="#"><img src="https://cdn-icons-png.flaticon.com/128/456/456212.png"></a></div>
   </div>
 </div>
+    <div><center><p style="color:red"><u>Click on Samsung Logo for Next Site</u></p></div></center>
                        <!-- Crousal -->
     <div id="carouselExampleDark" class="carousel carousel-dark slide">
         <div class="carousel-indicators">
